unpackaged/main/default/objects/ApplicationSettings__c/ApplicationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Application Settings</label>
</CustomObject>