unpackaged/main/default/objects/ApplicationSettings__c/fields/CalloutIntervalWait__c.field-meta.xml
<CustomField>
    <fullName>CalloutIntervalWait__c</fullName>
    <defaultValue>120</defaultValue>
    <label>CalloutIntervalWait (Seconds)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>