unpackaged/main/default/objects/ApplicationSettings__c/fields/LarryAPIToken__c.field-meta.xml
<CustomField>
    <fullName>LarryAPIToken__c</fullName>
    <description>Token generated in python and used for authenticating onboarding api calls</description>
    <inlineHelpText>Token generated in python and used for authenticating onboarding api calls</inlineHelpText>
    <label>Larry API Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>