unpackaged/main/default/objects/ApplicationSettings__c/fields/LarryEndpoint__c.field-meta.xml
<CustomField>
    <fullName>LarryEndpoint__c</fullName>
    <label>LarryEndpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>