unpackaged/main/default/objects/ApplicationSettings__c/fields/Objects__c.field-meta.xml
<CustomField>
    <fullName>Objects__c</fullName>
    <description>a comma separated list of object api names that have to be scanned through for enums and have their values send via rest api to external apps</description>
    <inlineHelpText>a comma separated list of object api names that have to be scanned through for enums and have their values send via rest api to external apps</inlineHelpText>
    <label>Objects</label>
    <type>TextArea</type>
</CustomField>