unpackaged/main/default/objects/ApplicationSettings__c/fields/SurplusBalance__c.field-meta.xml
<CustomField>
    <fullName>SurplusBalance__c</fullName>
    <label>Surplus Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>